--- a/app/src/main/res/layout/activity_example.xml
+++ b/app/src/main/res/layout/activity_example.xml
@@ -36,7 +36,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="25dp"
-                android:layout_marginTop="35dp"
                 android:justificationMode="inter_word"
                 android:fontFamily="@font/milliard_book"
                 android:lineSpacingExtra="12dp"
@@ -49,8 +48,7 @@
                 android:id="@+id/llCodeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_margin="25dp"
                 android:background="@drawable/white_corner_background"
                 app:layout_constraintTop_toBottomOf="@id/tvExampleText">
 
@@ -77,8 +75,7 @@
                 android:id="@+id/tvExplanation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
+                android:layout_margin="25dp"
                 android:justificationMode="inter_word"
                 android:fontFamily="@font/milliard_book"
                 android:lineSpacingExtra="12dp"
