--- a/app/src/main/res/layout/activity_chapter.xml
+++ b/app/src/main/res/layout/activity_chapter.xml
@@ -8,6 +8,7 @@
     tools:context=".ChapterActivity">
 
     <ScrollView
+        android:id="@+id/svContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
