--- a/app/src/main/res/layout/fragment_favourite_examples.xml
+++ b/app/src/main/res/layout/fragment_favourite_examples.xml
@@ -1,35 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FavouriteChaptersFragment">
+    tools:context=".FavouriteExamplesFragment">
 
     <ImageView
-        android:id="@+id/ivEmptyList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:src="@drawable/ic_edpub"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:id="@+id/ivFavouriteExamples"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="wrap_content"
-        android:id="@+id/pbFavouriteChapters"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbExamplesProgress"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:indicatorColor="@color/primaryColor"
         android:indeterminate="true"
+        app:indicatorColor="@color/primaryColor"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFavouriteChapters"
+        android:id="@+id/rvFavouriteExamples"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
